<resources>
    <string name="app_name">Guía SPG</string>
    <string name="main_title_part1">Seguimiento de Cultivos</string>
    <string name="main_title_part2">Agroecológicos</string>
    <string name="init_session_button">iniciar</string>
    <string name="ej_familia">ej_familia</string>
    <string name="nueva">Nueva</string>
    <string name="nueva_quinta">Nueva Quinta</string>
    <string name="guardar">Guardar</string>
    <string name="nueva_visita">Nueva Visita</string>
    <string name="ultimas_visitas">Últimas Visitas</string>
    <string name="continuar">Continuar</string>
    <string name="nueva_familia">Nueva Familia</string>
    <string name="editar_familia">Editar Familia</string>
    <string name="quintas">Quintas</string>
    <string name="seleccione_una_quinta">Seleccione una Quinta</string>
    <string name="seleccione_una_familia">Seleccione una Familia</string>
    <string name="familias">Familias</string>
    <string name="datos_del_usuario">Datos del Usuario</string>
    <string name="agregar">Agregar</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="miembros_del_equipo">Miembros del equipo</string>
    <string name="filtrar">Filtrar</string>
    <string name="buscar">Buscar</string>
    <string name="busqueda_avanzada">Busqueda avanzada</string>
    <string name="informacion_de_visita">Información de visita</string>
    <string name="nombre_de_la_quinta">Nombre de la Quinta</string>
    <string name="superficie_con_manejo_agroecologico">Superficie con manejo agroecológico</string>
    <string name="a_campo">A Campo</string>
    <string name="invernaculo">Invernáculo</string>
    <string name="observacion">Observación</string>
    <string name="aspiracion">Aspiración</string>
    <string name="sugerencia">Sugerencia</string>
    <string name="informacion_de_quinta">Información de Quinta</string>
    <string name="direccion">Dirección</string>
    <string name="editar_quinta">Editar Quinta</string>
    <string name="visitas">Visitas</string>
    <string name="informacion_de_familia">Información de Familia</string>
    <string name="nombre_de_la_familia">Nombre de la Familia</string>
    <string name="cumple">Cumple</string>
    <string name="aceptar">Aceptar</string>
    <string name="finalizar">Finalizar</string>
    <string name="editar_visita">Editar Visita</string>
    <string name="quitarfiltro">Quitar Filtro</string>
    <string name="usuario">Usuario</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
</resources>