<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itMenuVisitaBuscar"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/buscar"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/itMenuVisitasFiltrar"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filtrar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itMenuVisitasQuitarFiltro"
        android:icon="@drawable/ic_baseline_filter_list_off_24"
        android:title="@string/quitarfiltro"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itMenuVisitasFamilias"
        android:title="@string/familias" />
    <item
        android:id="@+id/itMenuVisitasQuintas"
        android:title="@string/quintas" />
    <item
        android:id="@+id/itMenuVisitasUsuario"
        android:title="@string/usuario" />
    <item
        android:id="@+id/itMenuVisitasCerrarSesion"
        android:title="@string/cerrar_sesion" />
</menu>