<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itMenuFamiliaBuscar"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/buscar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itMenuFamiliaFiltrar"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filtrar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itMenuFamiliasQuitarFiltro"
        android:icon="@drawable/ic_baseline_filter_list_off_24"
        android:title="@string/quitarfiltro"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>