<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#d0d0d0"
        android:paddingStart="15dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/tvInfoDetalleNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Rotación"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/tvInfoDetalleNombre2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp" />

        <CheckBox
            android:id="@+id/cbInfoDetalleCumple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:checked="false"
            android:clickable="false"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:paddingStart="5dp"
            android:text="@string/cumple"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:id="@+id/llInfoDetalleObservacionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/observacion"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvInfoDetalleObservacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="13dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llInfoDetalleAspiracionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aspiracion"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvInfoDetalleAspiracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="13dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llInfoDetalleSugerenciaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugerencia"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvInfoDetalleSugerencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="13dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>